implementacion de estructuras faltantes